优化错误处理信息，打印需要在当前类，不能包装，否则存在位置不对，当然可以考虑是否找上一层。

--- a/config/errmsg.properties
+++ b/config/errmsg.properties
@@ -2,6 +2,22 @@
 # 5开头为处理器失败相关错误。
 # 4开头为服务器相关连接报错
 # 3开头为客户端处理报错
+600=文件【{}】创建失败
+601=文件【{}】写入失败
+602=文件【{}】缓存刷入磁盘失败
+603=文件【{}】打开失败
+604=文件【{}】内容读取失败
+500=端口启动异常
+510=交易【{}】待发送信息为空
+511=交易【{}】信息封装异常
+512=交易【{}】报文发送失败
+513=交易【{}】接收报文无内容
+514=交易【{}】未识辨的发送阶段【{}】错误信息
+515=Peek长度【{}】错误读取错误
+516=数据长度【{]】读取异常
+517=缓存中读取数据内容失败
+520=返回报文解析失败
+521=交易【{}】报文编码失败
 404=服务端【{}】连接失败
 300=请求对象不能为空
 301=节点【{}】不存在
